# HellGL

HopefulGL/glad/include/glad/: glad.h
HopefulGL/glad/src/: glad.c
ProjOpenGL/: CMakeLists.txt  main
ProjOpenGL/include/: EBO.h  VAO.h  VBO.h  shaderClass.h
ProjOpenGL/src/: EBO.cpp  VAO.cpp  VBO.cpp  main.cpp  shaderClass.cpp
